fix sidebar scroll on mobile

--- a/web/sass/theme/styles.scss
+++ b/web/sass/theme/styles.scss
@@ -85,8 +85,8 @@ canvas {
   overflow: hidden;
 
   .docs-sidebar {
-    // height: calc(100vh - #{$headerHeight});
-    height: 100%;
+    height: calc(100vh - #{$headerHeight});
+    // height: 100%;
     background-color: #222;
     overflow-y: auto;
     overflow-x: hidden;
